# esp32_rust_firmware_dev

./: README.md  rust-startup
00_default-project/: Cargo.toml
esp32s3_00-default-project/: Cargo.toml
